# nogravity-the-game-classic

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  fixeol.py
source/rlx32/include/: _rlx.h  _rlx32.h  _stub.h  config.h  fixops.h  gui_os.h  gx_cdc.h  gx_csp.h  gx_flc.h  gx_init.h  gx_rgb.h  gx_struc.h  gx_text.h  gx_tools.h  iss_av.h  iss_defs.h  iss_fx.h  rlx.h  sys_gi.h  sysctrl.h  sysini.h  syslist.h  sysnetw.h  sysresmx.h  systime.h  systools.h  v3x_1.h  v3x_2.h  v3xcoll.h  v3xdefs.h  v3xfloat.h  v3xmaps.h  v3xmaths.h  v3xrend.h  v3xscene.h  v3xtrig.h  v3xtypes.h
source/rlx32/include/beos/: stub.h
source/rlx32/include/win32/: dxerr.h  gx_dx.h  sys_di.h  w32_dx.h
source/rlx32/src/: _stub.cpp  gui_os.c  gx_csp.c  gx_flc.c  gx_form.c  gx_png.c  gx_rgb.c  gx_tool.c  iss_av.c  iss_cdc.c  iss_db.c  iss_form.c  iss_ogg.c  pnglibconf.h  sysgi.c  sysini.c  syslist.c  sysresmx.c  systools.c  syszlib.c  v3x_1.c  v3x_2.c  v3x_3.c  v3x_priv.h  v3xdata.c  v3xmaps.c  v3xrend.c  v3xscene.c  v3xsoft.c
source/rlx32/src/beos/: _stub_beos.cpp  gx_bdirectwin.cpp  gx_bdirectwindow.cpp  gx_bdirectwindow.h  gx_bwindowscreen.cpp  gx_bwindowscreen.h  gx_bws.cpp  snd_mediakit.cpp  sysdbg.cpp  sysio.c  sysjoys.cpp  sysmouse.cpp  systime.c
source/rlx32/src/dummy/: snd.c  stub.cpp  sysjoy.c  syskeyb.c  sysmouse.c  sysreg.c  systime.c
source/rlx32/src/linux/: _stublinux.cpp  gx_sdl.cpp  snd_none.c  snd_openal.c  snd_sdlmixer.c  sysjoy.c  syskeyb.c  sysmouse.c  sysnet.c  sysreg.c  systime.c
source/rlx32/src/macos/: _stubmacos.cpp  snd_coreaudio.cpp  sysjoys.c  sysmouse.c  systime.c
source/rlx32/src/renderers/dummy/: dummy_gx.c  dummy_v3x.c  dummy_v3x.h
source/rlx32/src/renderers/dx6/: d3ddrv.cpp  d3ddrv.h
source/rlx32/src/renderers/gfx_ref/: gr16bit.c  gr32bit.c  gr8bit.c  gx_c.h  gx_drv.c  sp16bit.c  sp32bit.c  sp8bit.c
source/rlx32/src/renderers/glide/: glide.cpp  glidemem.cpp  glidemem.h
source/rlx32/src/renderers/opengl/: gl_gx.cpp  gl_v3x.cpp  gl_v3x.h
source/rlx32/src/renderers/opengl/beos/: bdirectglwindow.cpp  be_gl.cpp  dwgl.cpp  dwgl.h  gl_be.cpp
source/rlx32/src/renderers/opengl/linux/: sdl_gl.cpp
source/rlx32/src/renderers/opengl/macos/: agl_gl.cpp  cgl_gl.cpp
source/rlx32/src/renderers/opengl/win32/: w32_gl.cpp  wglext.cpp  wglext.h
source/rlx32/src/renderers/v3x_ref/: r16_128.c  r16_256.c  r32_256.c  v3xref.c  z08_256.c  z16_256.c  z32_256.c
source/rlx32/src/win32/: _stubw32.cpp  dxerr.c  gx_dx6.cpp  snd_ds6.cpp  snd_ds6.h  snd_eax.cpp  sysdbg.c  sysjoy.cpp  sysmouse.cpp  sysnetw.cpp  systime.c  systools.c
source/src/: _nginfo.h  ccmx.c  console.c  console.h  lithium.c  lt_cmx.h  lt_data.h  lt_game.c  lt_info.c  lt_input.c  lt_menu.c  lt_reso.c  lt_save.c  lt_sound.c  lt_st2.c  lt_start.c  lt_video.c  lt_weap.c
source/src/BeOS/: preferences.c
source/src/Linux/: preferences.c
source/src/MacOSX/: Info.plist  preferences.c
source/src/VC7.1/: nogravity.sln
source/src/VC7.1/ng_d3d/: ng_d3d.vcproj  ng_d3d.vcxproj  ng_d3d.vcxproj.filters
source/src/VC7.1/ng_game/: ng_game.vcproj  ng_game.vcxproj  ng_game.vcxproj.filters
source/src/VC7.1/ng_glide/: ng_glide.vcxproj  ng_glide.vcxproj.filters
source/src/VC7.1/ng_opengl/: ng_opengl.vcxproj  ng_opengl.vcxproj.filters
source/src/VC7.1/ng_soft/: ng_soft.vcxproj  ng_soft.vcxproj.filters
source/src/VC7.1/ng_w32/: ng_w32.rc  ng_w32.vcproj  ng_w32.vcxproj  ng_w32.vcxproj.filters
source/src/Win32/: preferences.c  renderer.def  resource.aps  resource.h  resource.rc
source/src/amiga/: preferences.c
